# robotframework-browser

./: .all-contributorsrc  .coveragerc  .dockerignore  .env  .eslintrc.js  .flake8  .gitattributes  .gitignore  .gitpod.yml  .prettierignore  .pypirc  Browser.html  Browser2.html  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  CORE_TEAM_AGREEMENT.md  Dockerfile  Makefile  README.md  bootstrap.py  browser.json  dev-requirements.txt  download_file.py  gen_stub.py  generategrpc.sh  index.html  mypy.ini  package-lock.json  package.json  pyproject.toml  pyright-script.sh  releasenotes.py  requirements.txt  setup.py  tasks.py  tsconfig.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  build.yml  docker_pr.yml  docker_testing.yml  dockers.yml  on-push.yml  on-release.yml  python-package.yml
.husky/: pre-commit  pre-push
Browser/: .flake8  __init__.py  assertion_engine.py  browser.py  dev-requirements.txt  entry.py  gen_stub.py  mypy.ini  playwright.py  playwright_client.py  pyproject.toml  requirements.txt  sorted_execution_time_logs.py  util.py  version.py
Browser/base/: __init__.py  cache.py  librarycomponent.py
Browser/entry/: __main__.py  constant.py  coverage_combine.js  coverage_combine.py  get_versions.py  rfbrowser_init.py  transform.py  translation.py
Browser/keywords/: __init__.py  assertion_formatter.py  browser_control.py  browser_state.py  clock.py  cookie.py  coverage.py  crawling.py  credential.py  device_descriptors.py  electron.py  evaluation.py  event_handling.py  formatter.py  getters.py  input.py  interaction.py  locator_handler.py  network.py  pdf.py  playwright_state.py  promises.py  runonfailure.py  strict_mode.py  validation.py  waiter.py  webapp_state.py
Browser/locators/: __init__.py  locatorparse.py
Browser/robocop_transformer/: __init__.py  network_idle.py
Browser/tidy_transformer/: network_idle.py  upload_file_by_selector.py
Browser/utils/: __init__.py  data_types.py  deprecated.py  js_utilities.py  logger.py  meta_python.py  misc.py  robot_booleans.py  settings_stack.py  time_conversion.py  types.py
Browser/wrapper/: browser-control.ts  browser-state.ts  browserstate.ts  evaluation.ts  getters.ts  index.js  index.ts  interaction.ts  playwirght-util.ts  response-util.ts  server.ts
Playwright/: __init__.py  entry.py  util.py
Playwright/locators/: __init__.py  locatorparse.py
Playwright/wrapper/: index.ts
adr/: 0003-test-app-logger-script-tag-manual-html-injection.md
atest/: README.md  atest_order.txt  browser.robot  open_and_close.robot
atest/demoapp/: 0.5.0-demo.robot  README.md  server.py
atest/docker/: DOCKER.md  Dockerfile  Dockerfile.latest_release  Dockerfile.playwright20.04  README.md
atest/robottidy_transformer/: CamelCaseTestCaseTransformer.py
browser_batteries/: README.md  pyproject.toml
browser_batteries/BrowserBatteries/: __init__.py
debug/: test.robot
docker/: Dockerfile  Dockerfile.dev_pr  Dockerfile.latest_release  Dockerfile.playwright20.04  Dockerfile.tests  README.md
docs/: Browser.html  Playwright.html  index.html  style.css
dynamic-test-app/: app.tsx  index.html  index.tsx
node/: .eslintrc.js  .prettierrc.js  build.testapp.js  build.wrapper.js  coverage-summary.mjs  eslint.config.mjs  jest.config.cjs  process-coverage.mjs  tsconfig.json  webpack.config.js  webpack.testapp.config.js
protobuf/: playwright.proto
protos/: playwright.proto
releasenotes/: Browser-1.4.0.rst  Browser-1.5.0.rst  Browser-1.6.0.rst  Browser-1.7.0.rst  Browser-11.3.0.rst  Browser-12.0.0.rst  Browser-13.1.0.rst  Browser-13.4.0.rst  Browser-14.0.0.rst  Browser-14.2.1.rst  Browser-14.4.0.rst  Browser-16.0.1.rst  Browser-16.0.3.rst  Browser-16.0.5.rst  Browser-17.1.0.rst  Browser-17.1.1.rst  Browser-17.4.0.rst  Browser-18.2.0.rst  Browser-18.3.0.rst  Browser-18.5.0.rst  Browser-18.5.1.rst  Browser-18.6.0.rst  Browser-18.6.1.rst  Browser-18.6.2.rst  Browser-18.7.0.rst  Browser-18.8.1.rst  Browser-19.0.0.rst  Browser-19.0.1.rst  Browser-19.1.1.rst  Browser-19.1.2.rst  Browser-19.10.0.rst  Browser-19.10.1.rst  Browser-19.11.0.rst  Browser-19.12.0.rst  Browser-19.12.1.md  Browser-19.12.2.md  Browser-19.12.6.md  Browser-19.12.7.md  Browser-19.13.0.md  Browser-19.5.0.rst  (+17 more)
robotframework_playwright/: __init__.py
src/: index.ts
tests/: test_robotframework_playwright.py
utest/: conftest.py  custom_locator_handler.js  test_assertion_engine.py  test_browser_folder_cleanup.py  test_context_cache.py  test_cookie.py  test_data_types.py  test_deprecated.py  test_development_functionality.py  test_docs.py  test_format_cookie.py  test_get_normalized_keyword.py  test_get_strict_mode.py  test_get_text.py  test_get_time.py  test_get_video_size.py  test_locator_parse.py  test_network.py  test_output_dir.py  test_playwright_state_selecting.py  test_presenter_mode_conversion.py  test_python_usage.py  test_rf_context_tracker.py  test_rfbrowser_translate.py  test_robotframework_browser.py  test_robotframework_playwright.py  test_run_on_failure.py  test_screenshot.py  test_secrets.py  test_set_rf_context.py  test_settings_stack.py  test_shared_playwright_port.py  test_timestr_to_millisecs.py  test_translation.py  test_type_converter.py  test_waiters.py
versions/: Browser-0.16.0  Browser-1.1.1.html  Browser-1.2.3.html  Browser-1.3.0.html  Browser-1.4.0.html  Browser-1.7.0.html  Browser-12.0.0.html  Browser-12.3.0.html  Browser-13.5.0.html  Browser-13.6.0.html  Browser-14.0.0.html  Browser-14.2.0.html  Browser-15.0.1.html  Browser-15.2.0.html  Browser-16.0.0.html  Browser-16.0.2.html  Browser-16.2.0.html  Browser-16.3.0.html  Browser-17.1.1.html  Browser-17.3.0.html  Browser-17.5.2.html  Browser-18.0.0.html  Browser-18.1.0.html  Browser-18.2.0.html  Browser-18.3.0.html  Browser-18.5.1.html  Browser-18.6.0.html  Browser-18.6.1.html  Browser-18.6.2.html  Browser-18.8.1.html  Browser-18.9.0.html  Browser-18.9.1.html  Browser-19.0.0.html  Browser-19.0.1.html  Browser-19.10.0.html  Browser-19.12.2.html  Browser-19.12.5.html  Browser-19.12.6.html  Browser-19.14.2.html  Browser-19.3.1.html  (+19 more)
(+567 files in other folders)
