[tool.poetry]
name = "robotframework-playwright"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["Mikko Korpela <mikko.korpela@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mkorpela/robotframework-playwright"
packages = [
    { include = "Browser" }
]
include = ["src/index.js", "src/generated/*"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library"
]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.29.0"
grpcio-tools = "^1.29.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.8.2"
robotframework = "^3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
