[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-browser"
version = "19.8.0"
dependencies = [
  "grpcio == 1.75.1",
  "grpcio-tools == 1.75.1",
  "protobuf == 6.32.1",
  "robotframework >= 5.0.1, < 8.0.0",
  "robotframework-pythonlibcore >= 4.4.1, < 5.0.0",
  "robotframework-assertion-engine >= 3.0.3, < 4.0.0",
  "wrapt >= 1.17.2",
  "overrides >= 7.7.0",
  "click >= 8.1.8",
  "seedir >= 0.5.1",
]
requires-python = ">= 3.9"
authors = [
  {name = "MarketSquare - Robot Framework community"}
]
maintainers = [
  {name = "Tatu Aalto", email = "aalto.aalto@gmail.com"},
  {name = "Mikko Korpela", email = "mikko.korpela@gmail.com"},
  {name = "Kerkko Pelttari", email = "kerk.pelt@gmail.com"},
  {name = "René Rohner", email = "rene@robotframework.org"}
]
description = "Robot Framework Browser library powered by Playwright. Aiming for speed, reliability and visibility."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["robotframework", "playwright", "testing", "automation", "web", "browser"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
]

[project.scripts]
rfbrowser = "Browser.entry.__main__:cli"

[project.optional-dependencies]
tidy = ["robotframework-tidy>=4.12.0"]
bb = ["robotframework-browser-batteries>=19.7.2"]

[project.urls]
Homepage = "https://robotframework-browser.org/"
Documentation = "https://marketsquare.github.io/robotframework-browser/Browser.html"
Repository = "https://github.com/MarketSquare/robotframework-browser"
Issues = "https://github.com/MarketSquare/robotframework-browser/issues"
Changelog = "https://github.com/MarketSquare/robotframework-browser/tree/main/docs/releasenotes"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
  "utest*",
  "atest*",
  "node_modules*",
  "docs*",
  "node*",
  "browser_batteries*",
]

[tool.setuptools.package-data]
"*" = [
  "index.js",
  "package.json",
  "package-lock.json",
  "selector-finder.js",
]

[tool.ruff]
lint.unfixable = []
exclude = [
  "__pycache__",
  "generated",
  "wrapper",
  "browser.pyi",
]
lint.ignore = [
  "B008",  # do not perform function calls in argument defaults
  "B904",  # TODO only temporary. should be fixed.
  "E501",  # line too long
  "N815",  # mixedCase variable in class scope
  "N803",  # argument name should be lowercase
  "N806",  # variable in function should be lowercase
  "N812",  # lowercase imported as non lowercase
  "N999",  # Invalid module name: 'Browser'
  "PLR0913",  # too many arguments
]
target-version = "py39"
lint.select = [
  "E",
  "F",
  "W",
  "C90",
  "I",
  "N",
  "B",
  "PYI",
  "PL",
  "PTH",
  "UP",
  "A",
  "C4",
  "DTZ",
  "ISC",
  "ICN",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "RSE",
  "RET",
  "SIM",
  "RUF"
]
[tool.ruff.lint.per-file-ignores]
"tasks.py" = [
  "T201",
  "PTH123",
  "PTH120"
]
"bootstrap.py" = ["T201"]

[tool.robotidy]
src = ["atest"]
lineseparator = "unix"
configure = [
  "NormalizeAssignments:equal_sign_type=space_and_equal_sign",
  "NormalizeAssignments:equal_sign_type_variables=space_and_equal_sign",
  "NormalizeNewLines:section_lines=1",
  "RenameKeywords:enabled=True",
  "RenameTestCases:capitalize_each_word=True:enabled=True"
]
